# SDL2_Template

./: CMakeLists.txt
include/: App.h  Config.h  FillRectangle.h  Line.h  Rectangle.h  Shape.h
src/: App.cpp  FillRectangle.cpp  Line.cpp  Main.cpp  Rectangle.cpp  Shape.cpp
